feat: Add upstream server gracefull error handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backenddevtest
 server.port=5000
-
 #Feign Configuration
 product.api.url=http://localhost:3001
-
+product.api.connection-timeout.seconds=2
+product.api.read-timeout.seconds=10
 #Spring Cloud Compatibility
 spring.cloud.compatibility-verifier.enabled=false
