feat: Adds a conditional cache for storing not empty responses

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ server.port=5000
 product.api.url=http://localhost:3001
 product.api.connection-timeout.seconds=2
 product.api.read-timeout.seconds=10
+#Cache Configuration
+product.api.cache.expiration.seconds=300
+product.api.cache.size=1000
 #Spring Cloud Compatibility
 spring.cloud.compatibility-verifier.enabled=false
