--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,13 @@ server.port=5000
 #Feign Configuration
 product.api.url=http://localhost:3001
 product.api.connection-timeout.seconds=2
-product.api.read-timeout.seconds=10
+product.api.read-timeout.seconds=3
+#Feign HttpClient Configuration (Apache HttpClient with connection pooling)
+feign.httpclient.enabled=true
+feign.httpclient.max-connections=400
+feign.httpclient.max-connections-per-route=200
+feign.httpclient.time-to-live=5
+feign.httpclient.time-to-live-unit=minutes
 #Cache Configuration
 product.api.cache.expiration.seconds=300
 product.api.cache.size=1000
