--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,20 @@ feign.httpclient.time-to-live-unit=minutes
 #Cache Configuration
 product.api.cache.expiration.seconds=300
 product.api.cache.size=1000
-#Spring Cloud Compatibility
+#Spring Cloud
+spring.cloud.openfeign.circuitbreaker.enabled=true
 spring.cloud.compatibility-verifier.enabled=false
+#Resilience4j Circuit Breaker Configuration
+resilience4j.circuitbreaker.configs.default.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.configs.default.sliding-window-size=10
+resilience4j.circuitbreaker.configs.default.minimum-number-of-calls=5
+resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
+resilience4j.circuitbreaker.configs.default.slow-call-rate-threshold=80
+resilience4j.circuitbreaker.configs.default.slow-call-duration-threshold=2s
+resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.configs.default.record-exceptions=java.io.IOException,java.util.concurrent.TimeoutException,feign.FeignException
+#Resilience4j TimeLimiter (works with Circuit Breaker)
+resilience4j.timelimiter.configs.default.timeout-duration=3s
+resilience4j.timelimiter.configs.default.cancel-running-future=true
