feat: Add custom ProductServiceException to the circuit breaker configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,8 @@ resilience4j.circuitbreaker.configs.default.slow-call-duration-threshold=2s
 resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
-resilience4j.circuitbreaker.configs.default.record-exceptions=java.io.IOException,java.util.concurrent.TimeoutException,feign.FeignException
+resilience4j.circuitbreaker.configs.default.record-exceptions=java.io.IOException,java.util.concurrent.TimeoutException,feign.FeignException,com.inditex.backenddevtest.product.domain.ProductServiceException
+resilience4j.circuitbreaker.configs.default.ignore-exceptions=com.inditex.backenddevtest.product.domain.ProductNotFoundException
 #Resilience4j TimeLimiter (works with Circuit Breaker)
 resilience4j.timelimiter.configs.default.timeout-duration=3s
 resilience4j.timelimiter.configs.default.cancel-running-future=true
