feat: Adds a background fetcher to repeat timedout requests to populate cache on the background

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=backenddevtest
 server.port=5000
-#Feign Configuration
+#Feign Configuration - Main fetcher
 product.api.url=http://localhost:3001
 product.api.connection-timeout.seconds=2
 product.api.read-timeout.seconds=3
+# Rest Template - Background fetcher timesout
+product.api.background.timeout.seconds=10
+product.api.background.read.seconds=2
 #Feign HttpClient Configuration (Apache HttpClient with connection pooling)
 feign.httpclient.enabled=true
 feign.httpclient.max-connections=400
@@ -28,6 +31,5 @@ resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-op
 resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
 resilience4j.circuitbreaker.configs.default.record-exceptions=java.io.IOException,java.util.concurrent.TimeoutException,feign.FeignException,com.inditex.backenddevtest.product.domain.ProductServiceException
 resilience4j.circuitbreaker.configs.default.ignore-exceptions=com.inditex.backenddevtest.product.domain.ProductNotFoundException
-#Resilience4j TimeLimiter (works with Circuit Breaker)
 resilience4j.timelimiter.configs.default.timeout-duration=3s
 resilience4j.timelimiter.configs.default.cancel-running-future=true
